proj1/tests/correct/def_return.py
# Make sure the return keyword works correctly

def hello_world():
    return 'what'
