proj1/tests/error/def_outside_return.py
def hello():
    print 'what'

return
